cmake_minimum_required(VERSION 2.8)
PROJECT(OPENCV_CMAKE)
SET(SRC_LIST main.cpp)
set (OpenCV_DIR D:/OpenCV/opencv2413/build)
FIND_PACKAGE(OpenCV REQUIRED)
SET(PROJECT_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/source)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${PROJECT_INCLUDE})

add_subdirectory(source)

ADD_EXECUTABLE(OPENCV_CMAKE_EXE ${SRC_LIST})
TARGET_LINK_LIBRARIES(OPENCV_CMAKE_EXE ${OpenCV_LIBS} SRC_MODULE_static)


#CMAKE_CURRENT_SOURCE_DIR 为当前运行CMAKELISTS的路径
#要想在与CMakeLists同级的main.cpp中调用别的文件夹中的.h文件，需要在INCLUDE_DIRECTORIES添加其头文件所在文件夹的目录